--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,2 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-architecttitle: Programming guidance of Nandescription: Useful for other children learning programming
+
